fixed background image on mobile by moving it 65% off center

--- a/css/styles.css
+++ b/css/styles.css
@@ -139,7 +139,7 @@ button.navbar-toggler:focus {
   background-attachment: fixed; */
   align-items: center;
   justify-content: center;
-  background-position-x: center;
+  background-position-x: 65%;
   background-position-y: center;
 }
 @media screen and (min-width:768px) {
